Fixed overflow issues

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -89,6 +89,7 @@ html {
 
 body {
   overflow-x: hidden;
+  position: relative;
 }
 
 h1 {
